err/leonardo-module-folio.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/leonardo_module_folio'...
Listing './lib/python3.5/site-packages/leonardo_module_folio/apps'...
Listing './lib/python3.5/site-packages/leonardo_module_folio/locale'...
Listing './lib/python3.5/site-packages/leonardo_module_folio/locale/cs'...
Listing './lib/python3.5/site-packages/leonardo_module_folio/locale/cs/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/leonardo_module_folio/locale/de'...
Listing './lib/python3.5/site-packages/leonardo_module_folio/locale/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/leonardo_module_folio/locale/sk'...
Listing './lib/python3.5/site-packages/leonardo_module_folio/locale/sk/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/leonardo_module_folio/migrations'...
Compiling './lib/python3.5/site-packages/leonardo_module_folio/models.py'...
***   File "./lib/python3.5/site-packages/leonardo_module_folio/models.py", line 230
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/leonardo_module_folio/templates'...
Listing './lib/python3.5/site-packages/leonardo_module_folio/templates/folio'...
Listing './lib/python3.5/site-packages/leonardo_module_folio/templates/widget'...
Listing './lib/python3.5/site-packages/leonardo_module_folio/templates/widget/featuredprojects'...
Listing './lib/python3.5/site-packages/leonardo_module_folio/templates/widget/projectcategories'...
Listing './lib/python3.5/site-packages/leonardo_module_folio/widget'...
Listing './lib/python3.5/site-packages/leonardo_module_folio/widget/featuredprojects'...
Listing './lib/python3.5/site-packages/leonardo_module_folio/widget/projectcategories'...
Listing './lib/python3.5/site-packages/leonardo_module_folio-2015.10.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
